google-workspace-redirects/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: google-workspace-redirects
spec:
  selector:
    app: google-workspace-redirects
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
