google-workspace-redirects/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: google-workspace-redirects
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mejl.danesjenovdan.si
        - drajv.danesjenovdan.si
        - koledar.danesjenovdan.si
      secretName: google-workspace-redirects-tls
  rules:
    - host: mejl.danesjenovdan.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: google-workspace-redirects
                port:
                  number: 80
    - host: drajv.danesjenovdan.si
      http: *http_paths
    - host: koledar.danesjenovdan.si
      http: *http_paths
